--- a/ui/src/app/admin/page/admin-management-page/admin-management.page.html
+++ b/ui/src/app/admin/page/admin-management-page/admin-management.page.html
@@ -8,15 +8,16 @@
   <li>
     <a routerLink="promotions" routerLinkActive="active" style="cursor: pointer">Promotion Management</a>
   </li>
-  <li routerLinkActive="active">
-    <a routerLink="device-management" style="cursor: pointer">Inventory Management</a>
+  <li >
+    <a routerLink="inventory" routerLinkActive="active" style="cursor: pointer">Inventory Management</a>
   </li>
-  <li routerLinkActive="active" routerLink="device-mapping"><a style="cursor: pointer" >Order Management</a></li>
+  <li >
+    <a routerLinkActive="active" routerLink="order-management" style="cursor: pointer" >Order Management</a></li>
   <li>
-    <a routerLink="create-admin" style="cursor: pointer">Create Admin Account</a>
+    <a routerLink="create-admin" routerLinkActive="active" style="cursor: pointer">Create Admin Account</a>
   </li>
-  <li routerLinkActive="active">
-    <a routerLink="device-management" style="cursor: pointer">Revenues</a>
+  <li>
+    <a routerLink="revenues" routerLinkActive="active" style="cursor: pointer">Revenues</a>
   </li>
 </ul>
 <div class="container">
