--- a/ui/src/app/products/component/product-overview/product-overview.component.html
+++ b/ui/src/app/products/component/product-overview/product-overview.component.html
@@ -14,17 +14,17 @@
         </div>
         <span class="reviews">({{ product.numberOfReviews }})</span>
       </div>
-      <div class="promo-info" *ngIf="product.promActive">
+      <div class="promo-info" *ngIf="hasPromo()">
         <span>{{ product.promo.name }} - {{ product.promo.percentage }}% off</span>
       </div>
-      <div class="price" *ngIf="product.promActive">
+      <div class="price" *ngIf="hasPromo()">
         <span class="old-price">Old Price: {{ product.price }}</span>
       </div>
     </div>
-    <div class="price" *ngIf="product.promActive">
+    <div class="price" *ngIf="hasPromo()">
       <span class="new-price">New Price: {{ (product.price - (product.price * (product.promo.percentage / 100))).toFixed(2) }}</span>
     </div>
-    <div class="price" *ngIf="!product.promActive">
+    <div class="price" *ngIf="!hasPromo()">
       <span class="new-price">Price: {{ product.price }}</span>
     </div>
   <button class="add-to-cart-button" (click)="onAddToCart()" *ngIf="product.isAvailable; else outOfStockButton">Add to Cart</button>
