--- a/ui/src/app/login/component/register-form/register-form.component.html
+++ b/ui/src/app/login/component/register-form/register-form.component.html
@@ -5,14 +5,14 @@
     <mat-form-field class="full">
       <mat-label>Username</mat-label>
       <input matInput formControlName="username" type="username">
-      <mat-error></mat-error>
+      <mat-error *ngIf="registerForm.controls['username']?.invalid && registerForm.controls['username']?.touched">Username is required</mat-error>
     </mat-form-field>
     </div>
     <div>
       <mat-form-field class="full">
         <mat-label>Email</mat-label>
         <input matInput type="email" formControlName="email">
-        <mat-error></mat-error>
+        <mat-error *ngIf="registerForm.controls['email']?.invalid && registerForm.controls['email']?.touched">A valid email is required</mat-error>
       </mat-form-field>
     </div>
     <div>
@@ -20,6 +20,7 @@
         <mat-label>Password</mat-label>
         <input matInput [type]="showPassword? 'text' : 'password'" type="password" formControlName="password">
         <mat-icon matSuffix (click)="onToggle()">{{showPassword?'visibility_off':'visibility'}}</mat-icon>
+        <mat-error *ngIf="registerForm.controls['password']?.invalid && registerForm.controls['password']?.touched">Password is required</mat-error>
       </mat-form-field>
     </div>
     <button mat-stroked-button class="full submit-button" [disabled]="registerForm.invalid">Register</button>
