--- a/ui/src/app/products/component/product/product.component.html
+++ b/ui/src/app/products/component/product/product.component.html
@@ -1,4 +1,4 @@
-<div class="container w-80">
+<div class="container w-80 bottom-margin">
   <h3 class="title">{{ product?.title }}</h3>
 <div>
   <div class="product-container">
