--- a/ui/src/app/products/component/product/product.component.less
+++ b/ui/src/app/products/component/product/product.component.less
@@ -126,3 +126,7 @@ ul.no-bullets {
   padding: 0; /* Remove padding */
   margin: 0; /* Remove margins */
 }
+
+.bottom-margin{
+  margin-bottom: 30px;
+}
