--- a/ui/src/app/shared/component/account-mini/account-mini.component.html
+++ b/ui/src/app/shared/component/account-mini/account-mini.component.html
@@ -12,7 +12,7 @@
       <li><a class="default-a" routerLink="/send-verification-code" (click)="dropdownRef.close()">Send verification code</a></li>
     </div>
     <div *ngIf="isAuthenticated" class="container">
-      <li><a class="default-a" (click)="dropdownRef.close()">My orders</a></li>
+      <li><a class="default-a" (click)="navigateToOrders();dropdownRef.close()">My orders</a></li>
       <li><a class="default-a" (click)="onLogout(); dropdownRef.close()">Logout</a></li>
     </div>
   </ul>
