--- a/ui/src/app/order/page/checkout-page/checkout.page.html
+++ b/ui/src/app/order/page/checkout-page/checkout.page.html
@@ -181,11 +181,8 @@
 </div>
       <div>
         <button mat-button matStepperPrevious>Back</button>
-        <button mat-button matStepperNext (click)="placeOrder()" >Next</button>
+        <button mat-button matStepperNext (click)="placeOrder()" >Place order</button>
       </div>
-    </mat-step>
-    <mat-step>
-      <ng-template matStepLabel>Done</ng-template>
     </mat-step>
   </mat-stepper>
 
