--- a/ui/src/app/products/component/product/product.component.less
+++ b/ui/src/app/products/component/product/product.component.less
@@ -130,3 +130,21 @@ ul.no-bullets {
 .bottom-margin{
   margin-bottom: 30px;
 }
+.out-of-stock-button {
+  display: block;
+  margin: 0 auto;
+  padding: 5px 10px;
+  background-color: transparent;
+  color: red; /* Set the text color to red */
+  border: none;
+  font-weight: bold;
+  cursor: not-allowed;
+  font-size: 18px;
+  width: 90%;
+  border-radius: 20px;
+}
+
+.out-of-stock-button:hover {
+  background-color: transparent;
+  color: red; /* Set the hover color to red */
+}
