--- a/ui/src/app/admin/component/order-modal/order-modal.component.html
+++ b/ui/src/app/admin/component/order-modal/order-modal.component.html
@@ -8,7 +8,7 @@
     <div>
       <mat-form-field appearance="fill" class="full-width">
         <mat-label>Status</mat-label>
-        <mat-select formControlName="status" (selectionChange)="onStatusChange($event)">
+        <mat-select formControlName="status" (selectionChange)="onStatusChange($event)" [value]="currentStatus">
           <mat-option *ngFor="let key of orderStatusKeys" [value]="key">
             {{ key }}</mat-option>
         </mat-select>
@@ -17,9 +17,9 @@
       </mat-form-field>
     </div>
       <div>
-        <mat-form-field class="full-width">
+        <mat-form-field class="full-width" >
           <mat-label>Tracking number</mat-label>
-          <input matInput type="text" formControlName="trackingNumber" [disabled]="!needTracking" >
+          <input matInput type="text" formControlName="trackingNumber" [disabled]="!needTracking"  >
           <mat-error *ngIf="form.controls['trackingNumber']?.invalid" >Tracking number is required</mat-error>
         </mat-form-field>
       </div>
