--- a/ui/src/app/login/component/login-form/login-form.component.html
+++ b/ui/src/app/login/component/login-form/login-form.component.html
@@ -4,7 +4,7 @@
       <mat-form-field style="width: 100%;">
         <mat-label>Username</mat-label>
         <input matInput formControlName="username">
-        <mat-error></mat-error>
+        <mat-error *ngIf="loginForm.controls['username']?.invalid && loginForm.controls['username']?.touched">Username is required</mat-error>
       </mat-form-field>
     </div>
     <div>
@@ -12,7 +12,7 @@
         <mat-label>Password</mat-label>
         <input matInput [type]="showPassword? 'text' : 'password'" type="password" formControlName="password">
         <mat-icon matSuffix (click)="onToggle()">{{showPassword?'visibility_off':'visibility'}}</mat-icon>
-        <mat-error></mat-error>
+        <mat-error *ngIf="loginForm.controls['password']?.invalid && loginForm.controls['password']?.touched">Password is required</mat-error>
       </mat-form-field>
     </div>
     <button mat-stroked-button style="width: 100%; border-radius: 20px" [disabled]="loginForm.invalid">Login</button>
