--- a/ui/src/app/products/component/product/product.component.html
+++ b/ui/src/app/products/component/product/product.component.html
@@ -17,9 +17,10 @@
     </div>
     <div class="container-price-variations">
     <div class="product-details">
-      <div *ngIf="product?.promotion.name !== null" class="old-price">$ {{product?.price}}</div>
-      <div class="price">$ {{ (product?.price - (product?.price * (product?.promotion.percentage / 100))).toFixed(2)}} </div>
-      <button class="add-to-cart-button" (click)="onAddToCart()"><mat-icon class="cart">add_shopping_cart</mat-icon>Add to Cart</button>
+      <div *ngIf="product?.promotion?.name !== null" class="old-price">$ {{product?.price}}</div>
+      <div class="price">$ {{ (product?.price - (product?.price * (product?.promotion?.percentage / 100))).toFixed(2)}} </div>
+      <button *ngIf="!product?.outOfStock" class="add-to-cart-button" (click)="onAddToCart()" ><mat-icon class="cart">add_shopping_cart</mat-icon>Add to Cart</button>
+      <button  *ngIf="product?.outOfStock" class="out-of-stock-button">Out of Stock</button>
     </div>
     <div class="variations">
       <div style="margin-top: 15px" *ngFor="let variation of variations">
